# Speecher-py

./: Makefile  README.md  build.py  pyproject.toml
fc/: __init__.py  cli.py  clipboard.py  colors.py  config.py  output.py  panel.py  presets.py
