[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfc"
version = "3.0.0"
description = "Smart File Collector — collect project files for AI context"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["file-collector", "cli", "tui", "ai", "context", "llm"]
dependencies = []

[project.scripts]
sfc = "sfc.app:run"

[tool.setuptools.packages.find]
include = ["sfc*"]
